# tiago_ros_pkgs

tiago_clf_launch/: CMakeLists.txt  package.xml
tiago_clf_launch/config/: calibrate.rviz  config-kinetic.rviz  joypad_8bitdo.yaml  realsense_base.yaml  realsense_far.yaml  realsense_near.yaml  tiago_motions.yaml
tiago_clf_launch/launch/: clf_joypad.launch  ecwm_mappr.launch  load_motions.launch  play_motion.launch  realsense.launch  realsense_far.launch  rs_D435i_calibration.launch  rs_D455_calibration.launch  rs_l515_calibration.launch  rs_nav.launch  test.launch  xtion_relay_endpoint.launch  xtion_relay_startpoint.launch
tiago_clf_nav/: CMakeLists.txt  package.xml
tiago_clf_nav/config/: amcl.yaml  amcl2.yaml  amcl_pal.yaml  amcl_tuned.yaml  costmap.yaml  ekf_odom.yaml  filter.yaml  global_costmap.yaml  global_costmap_following.yaml  global_planner.yaml  global_planner_restaurant.yaml  local_costmap.yaml  local_costmap_following.yaml  local_costmap_leg.yaml  local_costmap_sim.yaml  local_planner.yaml  local_planner_following.yaml  local_planner_sim.yaml  move_base.yaml  odom_ekf.yaml  odom_fuse.yaml  rviz.rviz  tiago_nav_motions.yaml
tiago_clf_nav/data/: central_lab.yaml  clf_cupro.yaml  clf_cupro_2.pgm  clf_cupro_2.yaml  clf_furnished2-sim.yaml  clf_map.yaml
tiago_clf_nav/launch/: amcl.launch  ekf_localization.launch  filters.launch  follow_filter.launch  gmapping.launch  map_server.launch  move_base.launch  move_base_follow.launch  move_base_following.launch  move_base_restaurant.launch  move_base_simple.launch  move_base_unknown.launch  nav.launch  (+7 more)
(+172 files in other folders)
